// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GenerateRecoveryPhrase /> should match snapshot 1`] = `
<RCTSafeAreaView
  safeArea={true}
  style={
    Object {
      "backgroundColor": "#4A90E2",
      "flex": 1,
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 1,
          "position": "absolute",
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={Object {}}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            null,
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": "2%",
            },
          ]
        }
      >
        Recovery Phrase Generated
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "500",
              "lineHeight": 20,
              "marginBottom": 0,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        This is your recovery phrase. Write it down, and don't share it with anyone.
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Image
        onLayout={[Function]}
        source={1}
        style={
          Array [
            Object {
              "marginBottom": 0,
              "resizeMode": "stretch",
              "width": "100%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "left": 20,
            "paddingHorizontal": "7%",
            "position": "absolute",
            "top": 20,
            "width": 320,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 17,
              },
              Object {
                "fontFamily": "Lato",
              },
              Object {
                "backgroundColor": "#333333",
                "color": "#ffffff",
              },
              null,
              null,
              Object {
                "backgroundColor": "transparent",
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              Object {
                "color": "#4A90E2",
                "fontSize": 18,
                "fontWeight": "900",
                "lineHeight": 28,
                "textAlign": "center",
              },
            ]
          }
        >
          hello some passphrase
        </Text>
      </View>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": 20,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        You will need this recovery phrase to restore from a backup. Keep it safe.
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 17,
              "marginBottom": "3%",
            },
          ]
        }
      >
        Are you sure you wrote it down?
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel="submit-recovery-passphrase"
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Array [
              Object {
                "borderRadius": 5,
                "elevation": 7,
                "height": 43,
                "marginBottom": 15,
                "marginLeft": "2%",
                "marginRight": "2%",
                "shadowColor": "#777777",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 5,
              },
            ],
          ]
        }
        testID="submit-recovery-passphrase"
        tvParallaxProperties={undefined}
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "backgroundColor": "#ffffff",
              },
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                null,
                Object {
                  "borderRadius": 5,
                  "elevation": 7,
                  "height": 43,
                  "marginBottom": 15,
                  "marginLeft": "2%",
                  "marginRight": "2%",
                  "shadowColor": "#777777",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                },
              ],
              false,
              false,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#4A90E2",
                  },
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "fontSize": 18,
                  },
                  undefined,
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                  false,
                ],
              ]
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`<GenerateRecoveryPhrase /> should match snapshot for error state 1`] = `
<RCTSafeAreaView
  safeArea={true}
  style={
    Object {
      "backgroundColor": "#4A90E2",
      "flex": 1,
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 1,
          "position": "absolute",
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={Object {}}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            null,
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": "2%",
            },
          ]
        }
      >
        Recovery Phrase Generated
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "500",
              "lineHeight": 20,
              "marginBottom": 0,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        This is your recovery phrase. Write it down, and don't share it with anyone.
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Image
        onLayout={[Function]}
        source={1}
        style={
          Array [
            Object {
              "marginBottom": 0,
              "resizeMode": "stretch",
              "width": "100%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "left": 20,
            "paddingHorizontal": "7%",
            "position": "absolute",
            "top": 20,
            "width": 320,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 17,
              },
              Object {
                "fontFamily": "Lato",
              },
              Object {
                "backgroundColor": "#333333",
                "color": "#ffffff",
              },
              null,
              Object {
                "textAlign": "center",
              },
              Object {
                "backgroundColor": "transparent",
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              Object {
                "color": "#4A4A4A",
              },
            ]
          }
        >
          Uh oh... Looks like something went wrong.
        </Text>
      </View>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": 20,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        You will need this recovery phrase to restore from a backup. Keep it safe.
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 17,
              "marginBottom": "3%",
            },
          ]
        }
      >
        Are you sure you wrote it down?
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel="submit-recovery-passphrase"
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Array [
              Object {
                "borderRadius": 5,
                "elevation": 7,
                "height": 43,
                "marginBottom": 15,
                "marginLeft": "2%",
                "marginRight": "2%",
                "shadowColor": "#777777",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 5,
              },
            ],
          ]
        }
        testID="submit-recovery-passphrase"
        tvParallaxProperties={undefined}
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "backgroundColor": "#ffffff",
              },
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                null,
                Object {
                  "borderRadius": 5,
                  "elevation": 7,
                  "height": 43,
                  "marginBottom": 15,
                  "marginLeft": "2%",
                  "marginRight": "2%",
                  "shadowColor": "#777777",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                },
              ],
              Object {
                "backgroundColor": "#dadee0",
              },
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                },
                Object {
                  "opacity": 0.4,
                },
              ],
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#4A90E2",
                  },
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "fontSize": 18,
                  },
                  undefined,
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                  undefined,
                ],
              ]
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`<GenerateRecoveryPhrase /> should match snapshot for loading state 1`] = `
<RCTSafeAreaView
  safeArea={true}
  style={
    Object {
      "backgroundColor": "#4A90E2",
      "flex": 1,
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 1,
          "position": "absolute",
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={Object {}}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            null,
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": "2%",
            },
          ]
        }
      >
        Recovery Phrase Generated
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "500",
              "lineHeight": 20,
              "marginBottom": 0,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        This is your recovery phrase. Write it down, and don't share it with anyone.
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Image
        onLayout={[Function]}
        source={1}
        style={
          Array [
            Object {
              "marginBottom": 0,
              "resizeMode": "stretch",
              "width": "100%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "left": 20,
            "paddingHorizontal": "7%",
            "position": "absolute",
            "top": 20,
          }
        }
      >
        <View
          style={
            Object {
              "padding": 40,
              "position": "absolute",
              "top": 20,
            }
          }
        />
      </View>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": 20,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        You will need this recovery phrase to restore from a backup. Keep it safe.
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 17,
              "marginBottom": "3%",
            },
          ]
        }
      >
        Are you sure you wrote it down?
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel="submit-recovery-passphrase"
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Array [
              Object {
                "borderRadius": 5,
                "elevation": 7,
                "height": 43,
                "marginBottom": 15,
                "marginLeft": "2%",
                "marginRight": "2%",
                "shadowColor": "#777777",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 5,
              },
            ],
          ]
        }
        testID="submit-recovery-passphrase"
        tvParallaxProperties={undefined}
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "backgroundColor": "#ffffff",
              },
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                null,
                Object {
                  "borderRadius": 5,
                  "elevation": 7,
                  "height": 43,
                  "marginBottom": 15,
                  "marginLeft": "2%",
                  "marginRight": "2%",
                  "shadowColor": "#777777",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                },
              ],
              Object {
                "backgroundColor": "#dadee0",
              },
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                },
                Object {
                  "opacity": 0.4,
                },
              ],
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#4A90E2",
                  },
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "fontSize": 18,
                  },
                  undefined,
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                  undefined,
                ],
              ]
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
